--- a/package.json
+++ b/package.json
@@ -32,14 +32,31 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6",
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "circular-dependency-plugin": "^5.2.0",
+    "copy-webpack-plugin": "^5.0.4",
+    "css-hot-loader": "^1.4.4",
+    "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^1.5.0",
+    "i18next": "^17.0.13",
+    "mini-css-extract-plugin": "^0.8.0",
+    "postcss-loader": "^3.0.0",
     "raf": "^3.4.1",
     "raw-loader": "^3.1.0",
+    "react": "^16.9.0",
+    "react-dev-utils": "^9.0.3",
+    "react-dom": "^16.9.0",
+    "react-i18next": "^10.12.2",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "ts-loader": "^6.0.4",
     "typescript": ">= 2",
+    "url-loader": "^2.1.0",
     "webpack": "^4.16.5",
-    "webpack-cli": ">= 3"
+    "webpack-cli": ">= 3",
+    "webpack-manifest-plugin": "^2.0.4",
+    "webpack-node-externals": "^1.7.2"
   },
   "peerDependencies": {
     "@babel/polyfill": ">= 7",
