--- a/package.json
+++ b/package.json
@@ -21,11 +21,9 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "core-js": "^3.2.1",
     "jest": "^24.9.0",
     "npm-check": "^5.9.0",
-    "prettier": "^1.14.2",
-    "regenerator-runtime": "^0.13.3"
+    "prettier": "^1.14.2"
   },
   "dependencies": {
     "@babel/core": "^7.1.2",
@@ -35,6 +33,7 @@
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "circular-dependency-plugin": "^5.2.0",
     "copy-webpack-plugin": "^5.0.4",
+    "core-js": "^3.2.1",
     "css-hot-loader": "^1.4.4",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
@@ -50,6 +49,7 @@
     "react-i18next": "^10.12.2",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "regenerator-runtime": "^0.13.3",
     "ts-loader": "^6.0.4",
     "typescript": ">= 2",
     "url-loader": "^2.1.0",
