--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-webpack-generator",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "scripts": {
     "test": "jest --coverage --runInBand",
@@ -21,6 +21,13 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "eslint": "^6.3.0",
+    "eslint-config-prettier": "^6.2.0",
+    "eslint-config-wiremore": "^3.0.5",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-unicorn": "^10.0.0",
     "jest": "^24.9.0",
     "npm-check": "^5.9.0",
     "prettier": "^1.14.2"
