--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "test": "jest --coverage --runInBand",
     "check": "npm-check"
   },
+  "bin": {
+    "my-webpack-generator": "./scripts/index.js"
+  },
   "main": "src/index.js",
   "keywords": [
     "webpack",
