--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
     "core-js": "^3.2.1",
     "css-hot-loader": "^1.4.4",
     "css-loader": "^3.2.0",
+    "express": "^4.17.1",
     "file-loader": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^1.5.0",
     "i18next": "^17.0.13",
     "mini-css-extract-plugin": "^0.8.0",
+    "nodemon": "^1.19.2",
     "postcss-loader": "^3.0.0",
     "raf": "^3.4.1",
     "raw-loader": "^3.1.0",
@@ -65,8 +67,11 @@
     "url-loader": "^2.1.0",
     "webpack": "^4.16.5",
     "webpack-cli": ">= 3",
+    "webpack-dev-middleware": "^3.7.1",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-manifest-plugin": "^2.0.4",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "write-file-webpack-plugin": "^4.5.1"
   },
   "peerDependencies": {
     "@babel/polyfill": ">= 7",
