--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
+    "chalk": "^2.4.2",
     "circular-dependency-plugin": "^5.2.0",
-    "copy-webpack-plugin": "^5.0.4",
     "core-js": "^3.2.1",
     "css-hot-loader": "^1.4.4",
     "css-loader": "^3.2.0",
@@ -53,7 +53,6 @@
     "mini-css-extract-plugin": "^0.8.0",
     "nodemon": "^1.19.2",
     "postcss-loader": "^3.0.0",
-    "raf": "^3.4.1",
     "raw-loader": "^3.1.0",
     "react": "^16.9.0",
     "react-dev-utils": "^9.0.3",
@@ -62,6 +61,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "regenerator-runtime": "^0.13.3",
+    "terser-webpack-plugin": "^1.4.1",
     "ts-loader": "^6.0.4",
     "typescript": ">= 2",
     "url-loader": "^2.1.0",
