--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-unicorn": "^10.0.0",
     "jest": "^24.9.0",
+    "jest-cli": "^24.9.0",
     "npm-check": "^5.9.0",
     "prettier": "^1.14.2"
   },
@@ -66,6 +67,7 @@
     "typescript": ">= 2",
     "url-loader": "^2.1.0",
     "webpack": "^4.16.5",
+    "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": ">= 3",
     "webpack-dev-middleware": "^3.7.1",
     "webpack-hot-middleware": "^2.25.0",
