serve app feature

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-webpack-generator",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "description": "",
   "scripts": {
     "test": "jest --coverage --runInBand",
@@ -42,13 +42,16 @@
     "@babel/preset-env": "^7.5.5",
     "@svgr/webpack": "^4.3.2",
     "babel-loader": "^8.0.6",
+    "body-parser": "^1.19.0",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "chalk": "^2.4.2",
     "circular-dependency-plugin": "^5.2.0",
     "core-js": "^3.2.1",
+    "cors": "^2.8.5",
     "css-hot-loader": "^1.4.4",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
+    "express-manifest-helpers": "^0.6.0",
     "file-loader": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^1.5.0",
     "i18next": "^17.0.13",
