--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-webpack-generator",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "",
   "scripts": {
     "test": "jest --coverage --runInBand",
@@ -46,6 +46,7 @@
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "chalk": "^2.4.2",
     "circular-dependency-plugin": "^5.2.0",
+    "copy-webpack-plugin": "^5.0.4",
     "core-js": "^3.2.1",
     "cors": "^2.8.5",
     "css-hot-loader": "^1.4.4",
